bee-common/bee-packable-derive/tests/fail/unknown_ident.stderr
error: unknown ident `unknown_ident`
  --> tests/fail/unknown_ident.rs:11:12
   |
11 | #[packable(unknown_ident = true)]
   |            ^^^^^^^^^^^^^
